ci: change how cache is saved/restored

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -26,10 +26,12 @@ jobs:
           pnpm run benchmark
 
       - name: Set cache dir
-        uses: actions/cache/restore@v4
+        uses: actions/cache@v4
         with:
           path: ./cache
-          key: ${{ runner.os }}-benchmark
+          key: benchmark-${{ runner.os }}-${{ github.run_id }}
+          restore-keys: |
+            benchmark-${{ runner.os }}
 
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
@@ -45,12 +47,6 @@ jobs:
           gh-pages-branch: main
           skip-fetch-gh-pages: ${{ github.event_name == 'push' }}
           benchmark-data-dir-path: ./cache/benchmarks
-
-      - name: Save cache
-        uses: actions/cache/save@v4
-        with:
-          path: ./cache
-          key: ${{ runner.os }}-benchmark
 
   docs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
