chore: fix oliver's id

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*	@d-roak @JanLewDev @elielnfinic @trungnotchung @hoangquocvietue
+*	@d-roak @JanLewDev @elielnfinic @trungnotchung @hoangquocvietuet
