chore: split folders for code reviewers

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,5 @@
 *	@d-roak @JanLewDev @elielnfinic @trungnotchung
+packages/object	@JanLewDev @trungnotchung
+packages/blueprints	@JanLewDev @trungnotchung
+packages/network	@elielnfinic
+packages/node	@elielnfinic
