chore: rm everyone from generic codeowner

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-*	@d-roak @JanLewDev @elielnfinic @trungnotchung
+*	@d-roak
 packages/object	@JanLewDev @trungnotchung
 packages/blueprints	@JanLewDev @trungnotchung
 packages/network	@elielnfinic
