fix: paths on codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
-*	@d-roak
-packages/object	@JanLewDev @trungnotchung
-packages/blueprints	@JanLewDev @trungnotchung
-packages/network	@elielnfinic
-packages/node	@elielnfinic
+*	                    @d-roak
+/packages/object	    @JanLewDev @trungnotchung
+/packages/blueprints	@JanLewDev @trungnotchung
+/packages/network	    @elielnfinic
+/packages/node	      @elielnfinic
