protbuf refactor; initial renamings; rm unused stuff

--- a/biome.json
+++ b/biome.json
@@ -7,8 +7,7 @@
 			"**/doc/*",
 			"**/*_pb.js",
 			"**/*_pb.ts",
-			"**/bundle/*",
-			"**/package.json"
+			"**/bundle/*"
 		]
 	},
 	"linter": {
