--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "ts-topology-examples-canvas",
-  "version": "0.3.1",
-  "license": "MIT",
-  "scripts": {
-    "build": "vite build",
-    "clean": "rm -rf dist/ node_modules/",
-    "dev": "vite serve",
-    "start": "ts-node ./src/index.ts"
-  },
-  "dependencies": {
-    "@topology-foundation/blueprints": "0.3.1",
-    "@topology-foundation/network": "0.3.1",
-    "@topology-foundation/node": "0.3.1",
-    "@topology-foundation/object": "0.3.1",
-    "crypto-browserify": "^3.12.0",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
-    "ts-node": "^10.9.2",
-    "vm-browserify": "^1.1.2"
-  },
-  "devDependencies": {
-    "@types/node": "^22.5.4",
-    "ts-loader": "^9.3.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.9",
-    "vite-plugin-node-polyfills": "^0.22.0"
-  }
+	"name": "ts-drp-examples-canvas",
+	"version": "0.3.1",
+	"license": "MIT",
+	"scripts": {
+		"build": "vite build",
+		"clean": "rm -rf dist/ node_modules/",
+		"dev": "vite serve",
+		"start": "ts-node ./src/index.ts"
+	},
+	"dependencies": {
+		"@topology-foundation/blueprints": "0.3.1",
+		"@topology-foundation/network": "0.3.1",
+		"@topology-foundation/node": "0.3.1",
+		"@topology-foundation/object": "0.3.1",
+		"crypto-browserify": "^3.12.0",
+		"process": "^0.11.10",
+		"stream-browserify": "^3.0.0",
+		"ts-node": "^10.9.2",
+		"vm-browserify": "^1.1.2"
+	},
+	"devDependencies": {
+		"@types/node": "^22.5.4",
+		"ts-loader": "^9.3.1",
+		"typescript": "^5.5.4",
+		"vite": "^5.4.9",
+		"vite-plugin-node-polyfills": "^0.22.0"
+	}
 }
