--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -9,10 +9,10 @@
 		"start": "ts-node ./src/index.ts"
 	},
 	"dependencies": {
-		"@topology-foundation/blueprints": "0.3.1",
-		"@topology-foundation/network": "0.3.1",
-		"@topology-foundation/node": "0.3.1",
-		"@topology-foundation/object": "0.3.1",
+		"@ts-drp/blueprints": "0.3.1",
+		"@ts-drp/network": "0.3.1",
+		"@ts-drp/node": "0.3.1",
+		"@ts-drp/object": "0.3.1",
 		"crypto-browserify": "^3.12.0",
 		"process": "^0.11.10",
 		"stream-browserify": "^3.0.0",
