--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -3,18 +3,16 @@
 	"version": "0.3.1",
 	"license": "MIT",
 	"scripts": {
-		"asbuild": "asc --config asconfig.json --target release",
 		"build": "vite build",
 		"clean": "rm -rf dist/ node_modules/",
 		"dev": "vite serve",
 		"start": "ts-node ./src/index.ts"
 	},
 	"dependencies": {
-		"@topology-foundation/blueprints": "0.3.1",
-		"@topology-foundation/network": "0.3.1",
-		"@topology-foundation/node": "0.3.1",
-		"@topology-foundation/object": "0.3.1",
-		"assemblyscript": "^0.27.29",
+		"@ts-drp/blueprints": "0.3.1",
+		"@ts-drp/network": "0.3.1",
+		"@ts-drp/node": "0.3.1",
+		"@ts-drp/object": "0.3.1",
 		"crypto-browserify": "^3.12.0",
 		"process": "^0.11.10",
 		"stream-browserify": "^3.0.0",
