--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "ts-topology",
-	"description": "The official TypeScript implementation of Topology Protocol",
+	"name": "ts-drp",
+	"description": "The official TypeScript implementation of DRP protocol",
 	"version": "0.3.1",
 	"license": "MIT",
 	"homepage": "https://topology.gg/",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/topology-foundation/ts-topology.git"
+		"url": "git+https://github.com/topology-foundation/ts-drp.git"
 	},
 	"bugs": {
-		"url": "https://github.com/topology-foundation/ts-topology/issues"
+		"url": "https://github.com/topology-foundation/ts-drp/issues"
 	},
 	"workspaces": [
 		"packages/*",
@@ -18,9 +18,9 @@
 	"scripts": {
 		"bench": "vitest bench",
 		"biome-check": "biome check",
-		"clean": "pnpm --filter '@topology-foundation/*' clean && rm -r node_modules/ docs/",
+		"clean": "pnpm --filter '@ts-drp/*' clean && rm -r node_modules/ docs/",
 		"docs": "typedoc",
-		"postinstall": "pnpm --filter '@topology-foundation/*' build",
+		"postinstall": "pnpm --filter '@ts-drp/*' build",
 		"proto-gen": "pnpm proto-gen:object && pnpm proto-gen:network",
 		"proto-gen:object": "buf generate packages/object/src/proto -o packages/object/src/proto",
 		"proto-gen:network": "buf generate packages/network/src/proto -o packages/network/src/proto",
