--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -22,8 +22,7 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@libp2p/interface": "^2.1.3",
-		"react-native-webrtc": "^124.0.3"
+		"@libp2p/interface": "^2.1.3"
 	},
 	"dependencies": {
 		"@bufbuild/protobuf": "^2.0.0",
@@ -37,8 +36,6 @@
 		"@libp2p/dcutr": "^2.0.6",
 		"@libp2p/devtools-metrics": "^1.1.5",
 		"@libp2p/identify": "^3.0.6",
-		"@libp2p/mdns": "^11.0.8",
-		"@libp2p/peer-id": "^5.0.4",
 		"@libp2p/pubsub-peer-discovery": "^11.0.0",
 		"@libp2p/webrtc": "^5.0.9",
 		"@libp2p/websockets": "^9.0.7",
@@ -49,7 +46,6 @@
 		"it-map": "^3.1.1",
 		"it-pipe": "^3.0.1",
 		"libp2p": "^2.1.6",
-		"ts-proto": "^2.2.4",
 		"uint8arrays": "^5.1.0"
 	}
 }
