--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,21 +16,25 @@ jobs:
         run: |
           pnpm install --no-frozen-lockfile
 
-  build-example-canvas:
+  generate-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - shell: bash
+      - name: List examples
+        id: list-examples
         run: |
-          pnpm install --no-frozen-lockfile
-          cd examples/canvas
-          pnpm build
+          echo "::set-output name=examples::$(ls -d examples/*/ | xargs -n 1 basename | jq -R -s -c 'split("\n")[:-1]'))"
+      - name: Set Matrix
+        id: set-matrix
+        run: |
+          echo "::set-output name=matrix::{\"example\": ${{ steps.list-examples.outputs.examples }}}"
 
-  build-example-chat:
+  build-examples:
     runs-on: ubuntu-latest
+    needs: generate-matrix
+    strategy:
+      matrix: ${{ fromJSON(needs.generate-matrix.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -39,5 +43,5 @@ jobs:
       - shell: bash
         run: |
           pnpm install --no-frozen-lockfile
-          cd examples/chat
+          cd examples/${{ matrix.example }}
           pnpm build
