--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix={\"example\": ${{ steps.list-examples.outputs.examples }}}" >> $GITHUB_OUTPUT
+          echo "matrix={"example": ${{ steps.list-examples.outputs.examples }}}" >> $GITHUB_OUTPUT
 
   build-examples:
     runs-on: ubuntu-latest
