--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
   generate-matrix:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
+      matrix: ${{ steps.set-matrix.outputs.examples }}
     steps:
       - uses: actions/checkout@v4
       - name: List examples
@@ -29,13 +29,14 @@ jobs:
       - name: Set Matrix
         id: set-matrix
         run: |
-          echo "matrix={"example": [${{ steps.list-examples.outputs.examples }}]}" >> $GITHUB_OUTPUT
+          echo "examples=${{ steps.list-examples.outputs.examples }}" >> $GITHUB_OUTPUT
 
   build-examples:
-    runs-on: ubuntu-latest
     needs: generate-matrix
+    runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJSON(needs.generate-matrix.outputs.matrix) }}
+      matrix:
+        examples: ${{ fromJSON(needs.generate-matrix.outputs.examples) }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
