refactor the examples

--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -9,20 +9,11 @@
 		"start": "ts-node ./src/index.ts"
 	},
 	"dependencies": {
-		"@ts-drp/blueprints": "0.3.1",
-		"@ts-drp/network": "0.3.1",
 		"@ts-drp/node": "0.3.1",
-		"@ts-drp/object": "0.3.1",
-		"crypto-browserify": "^3.12.0",
-		"process": "^0.11.10",
-		"stream-browserify": "^3.0.0",
-		"ts-node": "^10.9.2",
-		"uint8arrays": "^5.1.0",
-		"vm-browserify": "^1.1.2"
+		"@ts-drp/object": "0.3.1"
 	},
 	"devDependencies": {
 		"@types/node": "^22.5.4",
-		"ts-loader": "^9.5.1",
 		"typescript": "^5.5.4",
 		"vite": "^5.4.9",
 		"vite-plugin-node-polyfills": "^0.22.0"
