--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -5,23 +5,14 @@
 	"scripts": {
 		"build": "vite build",
 		"clean": "rm -rf dist/ node_modules/",
-		"dev": "vite serve",
-		"start": "ts-node ./src/index.ts"
+		"dev": "vite serve"
 	},
 	"dependencies": {
-		"@ts-drp/blueprints": "0.3.1",
-		"@ts-drp/network": "0.3.1",
 		"@ts-drp/node": "0.3.1",
-		"@ts-drp/object": "0.3.1",
-		"crypto-browserify": "^3.12.0",
-		"process": "^0.11.10",
-		"stream-browserify": "^3.0.0",
-		"ts-node": "^10.9.2",
-		"vm-browserify": "^1.1.2"
+		"@ts-drp/object": "0.3.1"
 	},
 	"devDependencies": {
 		"@types/node": "^22.5.4",
-		"ts-loader": "^9.3.1",
 		"typescript": "^5.5.4",
 		"vite": "^5.4.9",
 		"vite-plugin-node-polyfills": "^0.22.0"
