--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -12,6 +12,7 @@
     "dev": "vite serve",
     "start": "ts-node ./src/index.ts"
   },
+  "type": "module",
   "dependencies": {
     "@topology-foundation/blueprints": "0.3.1",
     "@topology-foundation/network": "0.3.1",
