--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "@topology-foundation/logger",
-  "version": "0.3.1",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/topology-foundation/ts-topology.git"
-  },
-  "type": "module",
-  "types": "./dist/src/index.d.ts",
-  "files": [
-    "src",
-    "dist",
-    "!dist/test",
-    "!**/*.tsbuildinfo"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/src/index.d.ts",
-      "import": "./dist/src/index.js"
-    }
-  },
-  "scripts": {
-    "build": "tsc -b",
-    "clean": "rm -rf dist/ node_modules/",
-    "prepack": "tsc -b",
-    "test": "vitest"
-  },
-  "dependencies": {
-    "loglevel": "^1.9.2",
-    "loglevel-plugin-prefix": "^0.8.4"
-  }
+	"name": "@ts-drp/logger",
+	"version": "0.3.1",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/topology-foundation/ts-drp.git"
+	},
+	"type": "module",
+	"types": "./dist/src/index.d.ts",
+	"files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+	"exports": {
+		".": {
+			"types": "./dist/src/index.d.ts",
+			"import": "./dist/src/index.js"
+		}
+	},
+	"scripts": {
+		"build": "tsc -b",
+		"clean": "rm -rf dist/ node_modules/",
+		"prepack": "tsc -b"
+	},
+	"dependencies": {
+		"loglevel": "^1.9.2",
+		"loglevel-plugin-prefix": "^0.8.4"
+	}
 }
