--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -1,42 +1,34 @@
 {
- "name": "@topology-foundation/object",
- "version": "0.3.1",
- "license": "MIT",
- "repository": {
-  "type": "git",
-  "url": "git+https://github.com/topology-foundation/ts-topology.git"
- },
- "type": "module",
- "types": "./dist/src/index.d.ts",
- "files": [
-  "src",
-  "dist",
-  "!dist/test",
-  "!**/*.tsbuildinfo"
- ],
- "main": "./dist/src/index.js",
- "exports": {
-  ".": {
-   "types": "./dist/src/index.d.ts",
-   "import": "./dist/src/index.js"
-  }
- },
- "scripts": {
-  "asbuild": "asc --config asconfig.json --target release",
-  "build": "tsc -b",
-  "clean": "rm -rf dist/ node_modules/",
-  "prepack": "tsc -b",
-  "test": "vitest",
-  "benchmark": "npx tsx tests/hashgraph.bench.ts | tee benchmark-output.txt"
- },
- "devDependencies": {
-  "assemblyscript": "^0.27.29",
-  "benchmark": "^2.1.4",
-  "tsx": "4.19.1"
- },
- "dependencies": {
-  "@bufbuild/protobuf": "^2.0.0",
-  "@topology-foundation/logger": "^0.3.1",
-  "ts-proto": "^2.2.4"
- }
+	"name": "@ts-drp/object",
+	"version": "0.3.1",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/topology-foundation/ts-drp.git"
+	},
+	"type": "module",
+	"types": "./dist/src/index.d.ts",
+	"files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+	"main": "./dist/src/index.js",
+	"exports": {
+		".": {
+			"types": "./dist/src/index.d.ts",
+			"import": "./dist/src/index.js"
+		}
+	},
+	"scripts": {
+		"build": "tsc -b",
+		"clean": "rm -rf dist/ node_modules/",
+		"prepack": "tsc -b",
+		"test": "vitest",
+		"benchmark": "tsx tests/hashgraph.bench.ts | tee benchmark-output.txt"
+	},
+	"devDependencies": {
+		"@bufbuild/protobuf": "^2.0.0",
+		"benchmark": "^2.1.4",
+		"tsx": "4.19.1"
+	},
+	"dependencies": {
+		"@ts-drp/logger": "^0.3.1"
+	}
 }
