--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -6,7 +6,7 @@
 		"build": "vite build",
 		"clean": "rm -rf dist/ node_modules/",
 		"dev": "vite serve",
-		"start": "ts-node ./src/index.ts"
+		"start": "vite preview --host --port 5173"
 	},
 	"dependencies": {
 		"@ts-drp/node": "0.4.0",
