--- a/examples/grid/package.json
+++ b/examples/grid/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"build": "vite build",
 		"clean": "rm -rf dist/ node_modules/",
-		"dev": "vite serve"
+		"dev": "vite serve",
+		"start": "vite preview --host --port 5173"
 	},
 	"dependencies": {
 		"@ts-drp/node": "0.4.0",
