--- a/examples/local-bootstrap/package.json
+++ b/examples/local-bootstrap/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "ts-drp-example-localdev",
-	"version": "0.3.1",
-	"license": "MIT",
-	"scripts": {
-		"build": "vite build",
-		"clean": "rm -rf dist/ node_modules/",
-		"dev": "vite serve"
-	},
-	"dependencies": {
-		"@ts-drp/node": "0.3.1"
-	},
-	"devDependencies": {
-		"@types/node": "^22.5.4",
-		"typescript": "^5.5.4",
-		"vite": "^6.0.2",
-		"vite-plugin-node-polyfills": "^0.22.0"
-	}
+ "name": "ts-drp-example-localdev",
+ "version": "0.4.0-0",
+ "license": "MIT",
+ "scripts": {
+  "build": "vite build",
+  "clean": "rm -rf dist/ node_modules/",
+  "dev": "vite serve"
+ },
+ "dependencies": {
+  "@ts-drp/node": "0.4.0-0"
+ },
+ "devDependencies": {
+  "@types/node": "^22.5.4",
+  "typescript": "^5.5.4",
+  "vite": "^6.0.2",
+  "vite-plugin-node-polyfills": "^0.22.0"
+ }
 }
