ci: rm gh npm registry

--- a/packages/blueprints/package.json
+++ b/packages/blueprints/package.json
@@ -1,35 +1,30 @@
 {
- "name": "@ts-drp/blueprints",
- "version": "0.4.0-0",
- "license": "MIT",
- "repository": {
-  "type": "git",
-  "url": "git+https://github.com/topology-foundation/ts-drp.git"
- },
- "type": "module",
- "types": "./dist/src/index.d.ts",
- "files": [
-  "src",
-  "dist",
-  "!dist/test",
-  "!**/*.tsbuildinfo"
- ],
- "exports": {
-  ".": {
-   "types": "./dist/src/index.d.ts",
-   "import": "./dist/src/index.js"
-  }
- },
- "scripts": {
-  "build": "tsc -b",
-  "clean": "rm -rf dist/ node_modules/",
-  "prepack": "tsc -b",
-  "test": "vitest"
- },
- "devDependencies": {
-  "@ts-drp/object": "0.4.0-0"
- },
- "dependencies": {
-  "@thi.ng/random": "^4.1.0"
- }
+	"name": "@ts-drp/blueprints",
+	"version": "0.4.0-0",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/topology-foundation/ts-drp.git"
+	},
+	"type": "module",
+	"types": "./dist/src/index.d.ts",
+	"files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+	"exports": {
+		".": {
+			"types": "./dist/src/index.d.ts",
+			"import": "./dist/src/index.js"
+		}
+	},
+	"scripts": {
+		"build": "tsc -b",
+		"clean": "rm -rf dist/ node_modules/",
+		"prepack": "tsc -b",
+		"test": "vitest"
+	},
+	"devDependencies": {
+		"@ts-drp/object": "0.4.0-0"
+	},
+	"dependencies": {
+		"@thi.ng/random": "^4.1.0"
+	}
 }
