--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,32 +1,27 @@
 {
- "name": "@ts-drp/logger",
- "version": "0.4.0-0",
- "license": "MIT",
- "repository": {
-  "type": "git",
-  "url": "git+https://github.com/topology-foundation/ts-drp.git"
- },
- "type": "module",
- "types": "./dist/src/index.d.ts",
- "files": [
-  "src",
-  "dist",
-  "!dist/test",
-  "!**/*.tsbuildinfo"
- ],
- "exports": {
-  ".": {
-   "types": "./dist/src/index.d.ts",
-   "import": "./dist/src/index.js"
-  }
- },
- "scripts": {
-  "build": "tsc -b",
-  "clean": "rm -rf dist/ node_modules/",
-  "prepack": "tsc -b"
- },
- "dependencies": {
-  "loglevel": "^1.9.2",
-  "loglevel-plugin-prefix": "^0.8.4"
- }
+	"name": "@ts-drp/logger",
+	"version": "0.4.0-0",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/topology-foundation/ts-drp.git"
+	},
+	"type": "module",
+	"types": "./dist/src/index.d.ts",
+	"files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+	"exports": {
+		".": {
+			"types": "./dist/src/index.d.ts",
+			"import": "./dist/src/index.js"
+		}
+	},
+	"scripts": {
+		"build": "tsc -b",
+		"clean": "rm -rf dist/ node_modules/",
+		"prepack": "tsc -b"
+	},
+	"dependencies": {
+		"loglevel": "^1.9.2",
+		"loglevel-plugin-prefix": "^0.8.4"
+	}
 }
