--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,49 +1,44 @@
 {
- "name": "@ts-drp/node",
- "version": "0.4.0-0",
- "license": "MIT",
- "repository": {
-  "type": "git",
-  "url": "git+https://github.com/topology-foundation/ts-drp.git"
- },
- "type": "module",
- "types": "./dist/src/index.d.ts",
- "files": [
-  "src",
-  "dist",
-  "!dist/test",
-  "!**/*.tsbuildinfo"
- ],
- "exports": {
-  ".": {
-   "types": "./dist/src/index.d.ts",
-   "import": "./dist/src/index.js"
-  }
- },
- "scripts": {
-  "build": "tsc -b",
-  "clean": "rm -rf dist/ node_modules/",
-  "cli": "tsx ./src/run.ts",
-  "prebuild": "node -p \"'export const VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
-  "prepack": "tsc -b",
-  "test": "vitest"
- },
- "devDependencies": {
-  "@bufbuild/protobuf": "^2.0.0",
-  "@types/node": "^22.5.4",
-  "tsx": "4.19.1",
-  "typescript": "^5.5.4",
-  "vitest": "^2.1.1"
- },
- "dependencies": {
-  "@chainsafe/libp2p-gossipsub": "^14.1.0",
-  "@grpc/grpc-js": "^1.12.2",
-  "@libp2p/interface": "^2.1.3",
-  "dotenv": "^16.4.5",
-  "@ts-drp/blueprints": "0.4.0-0",
-  "@ts-drp/network": "0.4.0-0",
-  "@ts-drp/object": "0.4.0-0",
-  "@ts-drp/logger": "0.4.0-0",
-  "commander": "^12.1.0"
- }
+	"name": "@ts-drp/node",
+	"version": "0.4.0-0",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/topology-foundation/ts-drp.git"
+	},
+	"type": "module",
+	"types": "./dist/src/index.d.ts",
+	"files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+	"exports": {
+		".": {
+			"types": "./dist/src/index.d.ts",
+			"import": "./dist/src/index.js"
+		}
+	},
+	"scripts": {
+		"build": "tsc -b",
+		"clean": "rm -rf dist/ node_modules/",
+		"cli": "tsx ./src/run.ts",
+		"prebuild": "node -p \"'export const VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
+		"prepack": "tsc -b",
+		"test": "vitest"
+	},
+	"devDependencies": {
+		"@bufbuild/protobuf": "^2.0.0",
+		"@types/node": "^22.5.4",
+		"tsx": "4.19.1",
+		"typescript": "^5.5.4",
+		"vitest": "^2.1.1"
+	},
+	"dependencies": {
+		"@chainsafe/libp2p-gossipsub": "^14.1.0",
+		"@grpc/grpc-js": "^1.12.2",
+		"@libp2p/interface": "^2.1.3",
+		"dotenv": "^16.4.5",
+		"@ts-drp/blueprints": "0.4.0-0",
+		"@ts-drp/network": "0.4.0-0",
+		"@ts-drp/object": "0.4.0-0",
+		"@ts-drp/logger": "0.4.0-0",
+		"commander": "^12.1.0"
+	}
 }
