--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ts-drp-example-chat",
-	"version": "0.4.0-2",
+	"version": "0.4.0",
 	"license": "MIT",
 	"scripts": {
 		"build": "vite build",
@@ -9,8 +9,8 @@
 		"start": "ts-node ./src/index.ts"
 	},
 	"dependencies": {
-		"@ts-drp/node": "0.4.0-2",
-		"@ts-drp/object": "0.4.0-2"
+		"@ts-drp/node": "0.4.0",
+		"@ts-drp/object": "0.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "^22.5.4",
