--- a/examples/grid/package.json
+++ b/examples/grid/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ts-drp-example-grid",
-	"version": "0.4.0-2",
+	"version": "0.4.0",
 	"license": "MIT",
 	"scripts": {
 		"build": "vite build",
@@ -8,8 +8,8 @@
 		"dev": "vite serve"
 	},
 	"dependencies": {
-		"@ts-drp/node": "0.4.0-2",
-		"@ts-drp/object": "0.4.0-2"
+		"@ts-drp/node": "0.4.0",
+		"@ts-drp/object": "0.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "^22.5.4",
