--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ts-drp",
 	"description": "The official TypeScript implementation of DRP protocol",
-	"version": "0.4.0-2",
+	"version": "0.4.0",
 	"license": "MIT",
 	"homepage": "https://topology.gg/",
 	"repository": {
