--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ts-drp/network",
-	"version": "0.4.0-2",
+	"version": "0.4.0",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -41,7 +41,7 @@
 		"@libp2p/websockets": "^9.0.7",
 		"@libp2p/webtransport": "^5.0.9",
 		"@multiformats/multiaddr": "^12.3.1",
-		"@ts-drp/logger": "^0.4.0-2",
+		"@ts-drp/logger": "^0.4.0",
 		"it-length-prefixed": "^9.1.0",
 		"it-map": "^3.1.1",
 		"it-pipe": "^3.0.1",
