--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ts-drp/object",
-	"version": "0.4.0-2",
+	"version": "0.4.0",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -29,6 +29,6 @@
 		"tsx": "4.19.1"
 	},
 	"dependencies": {
-		"@ts-drp/logger": "^0.4.0-2"
+		"@ts-drp/logger": "^0.4.0"
 	}
 }
