--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -17,11 +17,12 @@
 		}
 	},
 	"scripts": {
+		"benchmark": "tsx tests/hashgraph.bench.ts | tee benchmark-output.txt",
 		"build": "tsc -b",
 		"clean": "rm -rf dist/ node_modules/",
 		"prepack": "tsc -b",
 		"test": "vitest",
-		"benchmark": "tsx tests/hashgraph.bench.ts | tee benchmark-output.txt"
+		"watch": "tsc -b -w"
 	},
 	"devDependencies": {
 		"@bufbuild/protobuf": "^2.0.0",
