--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -34,6 +34,8 @@
 	"dependencies": {
 		"@chainsafe/libp2p-gossipsub": "^14.1.0",
 		"@grpc/grpc-js": "^1.12.2",
+		"@grpc/proto-loader": "^0.7.13",
+		"@grpc/reflection": "^1.0.4",
 		"@libp2p/interface": "^2.1.3",
 		"dotenv": "^16.4.5",
 		"@ts-drp/blueprints": "0.4.0",
