--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -47,6 +47,7 @@
 		"it-map": "^3.1.1",
 		"it-pipe": "^3.0.1",
 		"libp2p": "^2.1.6",
-		"uint8arrays": "^5.1.0"
+		"uint8arrays": "^5.1.0",
+		"base64-js": "^1.5.1"
 	}
 }
