--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -41,6 +41,7 @@
 		"@ts-drp/object": "0.4.0",
 		"@ts-drp/logger": "0.4.0",
 		"commander": "^12.1.0",
-		"uint8arrays": "^5.1.0"
+		"uint8arrays": "^5.1.0",
+		"base64-js": "^1.5.1"
 	}
 }
