--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
-*                      @d-roak
+*                      @d-roak @anhnd350309
 /packages/object/      @JanLewDev @trungnotchung
 /packages/blueprints/  @JanLewDev @trungnotchung
